--- a/README
+++ b/README
@@ -1,42 +1,58 @@
-# 🌌 Welcome to Ayush's Digital Realm
-
 <div align="center">
-  <img src="https://capsule-render.vercel.app/render?type=soft&color=00ED64&height=200&section=header&text=AYUSH&fontSize=80&animation=fadeIn&fontColor=010409" width="100%" />
-</div>
 
-### 🛠 Digital Alchemist & Tech Architect
-Dedicated to building high-performance **Telegram Bots**, scalable **Web Architectures**, and seamless **Android Experiences**. I thrive in the dark mode, turning caffeine into clean, efficient code.
+# 💎 ICONIC 
+### The Ultimate Developer Framework & Resources
+  
+![Stars](https://img.shields.io/github/stars/YuheshPandian/ICONIC?style=for-the-badge&color=00ED64&logo=github)
+![Forks](https://img.shields.io/github/forks/YuheshPandian/ICONIC?style=for-the-badge&color=white&logo=git)
+![Activity](https://img.shields.io/github/last-commit/YuheshPandian/ICONIC?style=for-the-badge&color=FF3131&logo=clock)
+![Issues](https://img.shields.io/github/issues/YuheshPandian/ICONIC?style=for-the-badge&color=yellow&logo=github-issues)
+
+<p align="center">
+  <b>A curated collection of elite tools, scripts, and frameworks for modern developers.</b>
+</p>
 
 ---
 
-### 🚀 Tech Command Center
+[ 🚀 [Quick Start](#-getting-started) ] • [ 🛠 [Core Features](#-features) ] • [ 📮 [Contact Support](https://t.me/YourUsername) ]
 
-| Category | Tools & Languages |
-| :--- | :--- |
-| **Primary** | ![Go](https://img.shields.io/badge/Go-00ADD8?style=for-the-badge&logo=go&logoColor=white) ![Python](https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white) ![C++](https://img.shields.io/badge/C%2B%2B-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white) |
-| **Full-Stack** | ![React](https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB) ![Node.js](https://img.shields.io/badge/Node.js-339933?style=for-the-badge&logo=nodedotjs&logoColor=white) ![TypeScript](https://img.shields.io/badge/TypeScript-007ACC?style=for-the-badge&logo=typescript&logoColor=white) |
-| **Mobile** | ![Flutter](https://img.shields.io/badge/Flutter-02569B?style=for-the-badge&logo=flutter&logoColor=white) ![Dart](https://img.shields.io/badge/Dart-0175C2?style=for-the-badge&logo=dart&logoColor=white) ![Android](https://img.shields.io/badge/Android-3DDC84?style=for-the-badge&logo=android&logoColor=white) |
-| **Database** | ![MongoDB](https://img.shields.io/badge/MongoDB-4EA94B?style=for-the-badge&logo=mongodb&logoColor=white) ![Redis](https://img.shields.io/badge/redis-%23DD0031.svg?style=for-the-badge&logo=redis&logoColor=white) ![MySQL](https://img.shields.io/badge/mysql-%2300f.svg?style=for-the-badge&logo=mysql&logoColor=white) |
-| **DevOps** | ![Docker](https://img.shields.io/badge/docker-%230db7ed.svg?style=for-the-badge&logo=docker&logoColor=white) ![AWS](https://img.shields.io/badge/AWS-%23FF9900.svg?style=for-the-badge&logo=amazon-aws&logoColor=white) ![Nginx](https://img.shields.io/badge/nginx-%23009639.svg?style=for-the-badge&logo=nginx&logoColor=white) |
-
----
-
-### 📊 My GitHub Journey
-<div align="center">
-  <img src="https://github-readme-stats.vercel.app/api?username=JustAyu&show_icons=true&theme=tokyonight&hide_border=true&bg_color=010409&title_color=00ED64&icon_color=00ED64" alt="Ayush Stats" width="48%" />
-  <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=JustAyu&layout=compact&theme=tokyonight&hide_border=true&bg_color=010409&title_color=00ED64&icon_color=00ED64" alt="Top Languages" width="48%" />
 </div>
 
 ---
 
-### 📜 The Protocol
-- **Working Hours:** 10:00 AM - 08:00 PM (IST)
-- **Direct Access:** No "Hi/Hello". Send the project brief.
-- **Rules:** 50% Upfront. Quality is non-negotiable.
+### 🧬 What is ICONIC?
+**ICONIC** is more than just a repository; it's a foundation for building high-speed automation and sleek user interfaces. Whether you are building **Telegram Bots**, **Web Apps**, or **Backend Systems**, ICONIC provides the skeleton you need.
 
-### 📮 Reach Me
-[<img src="https://img.shields.io/badge/Telegram-2CA5E0?style=for-the-badge&logo=telegram&logoColor=white" />](https://t.me/YourUsername)
+### 🔥 Key Highlights
+- ⚡ **Performance First:** Built for speed and minimal latency.
+- 🛡 **Secure by Design:** Pre-configured security protocols for APIs.
+- 🎨 **Modern Aesthetics:** Focused on dark-mode/glass-morphism UI.
+- 🤖 **Automation Ready:** Native support for Telegram and Python-based automation.
 
+---
+
+### 📊 Repo Analytics
 <div align="center">
-  <img src="https://komarev.com/ghpvc/?username=JustAyu&color=00ED64&style=flat-square&label=PROFILE+VIEWS" />
+  <img src="https://github-readme-stats.vercel.app/api/pin/?username=YuheshPandian&repo=ICONIC&theme=tokyonight&bg_color=010409&title_color=00ED64&icon_color=00ED64" width="400" />
+  <br>
+  <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=YuheshPandian&layout=compact&theme=tokyonight&hide_border=true&bg_color=010409&title_color=00ED64" width="400" />
 </div>
+
+---
+
+### 🛠 Tech Stack Used in ICONIC
+<p align="left">
+  <img src="https://img.shields.io/badge/Go-00ADD8?style=flat-square&logo=go&logoColor=white" />
+  <img src="https://img.shields.io/badge/Python-3776AB?style=flat-square&logo=python&logoColor=white" />
+  <img src="https://img.shields.io/badge/MongoDB-4EA94B?style=flat-square&logo=mongodb&logoColor=white" />
+  <img src="https://img.shields.io/badge/Docker-2496ED?style=flat-square&logo=docker&logoColor=white" />
+</p>
+
+---
+
+### 🏁 Getting Started
+Clone the repository and start building:
+```bash
+git clone [https://github.com/YuheshPandian/ICONIC.git](https://github.com/YuheshPandian/ICONIC.git)
+cd ICONIC
+# Your setup commands here
